Tue Feb 15 13:29:35 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/AV/AVStreams_i.h:

          Removed an unused #include of Trader.h.

        * orbsvcs/orbsvcs/Notify/XML_Loader.cpp:

          Changed messages to not use the word Error to avoid potential
          problems with the Scoreboard.

        * orbsvcs/orbsvcs/Notify/XML_Saver.cpp:

          Fixed a bug in the output code to include a missing space.

        * orbsvcs/tests/Notify/XML_Persistence/main.cpp:
        * orbsvcs/tests/Notify/XML_Persistence/run_test.pl:

          Added a persistent POA to help with IOR comparisons.  It's not
          100% perfect, but it's better than it was.

        * orbsvcs/tests/Notify/XML_Persistence/svc.conf:

          Changed the case of persistence to match the
          TAO_CosNotification_Persistence library.

Tue Feb 15 07:09:41 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_ch.cpp:

          Added generation of forward declaration of the associated
          event consumer interface, if the valuetype node being
          processed happens to be an eventtype. Also added the _ptr
          typedef, so it can be seen by a component declaration
          that occurs later in the same scope.

        * TAO_IDL/be/be_visitor_component/component_cs.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:

          Changed return values of some generated methods that
          return CORBA::Boolean to return 'true' or 'false'
          instead of '1' or '0'.

        * TAO_IDL/be/be_visitor_exception/exception_cs.cpp (_tao_duplicate):

          Added code generation to initialize the declaration of the
          return value pointer to 0. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for making the suggestion.

Tue Feb 15 10:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/performance-tests/RTEvent/lib/Servant_var.h: